--- a/view/table.html
+++ b/view/table.html
@@ -40,7 +40,7 @@
             </nav>
             <h1>Table</h1>
             <select name="view" id="view">
-              <option value="">View per page</option>
+              <option value="10">View per page</option>
               <option value="10">10</option>
               <option value="25">25</option>
               <option value="50">50</option>
@@ -69,6 +69,11 @@
                   </tr> -->
                 </tbody>
             </table>
+            <div id="page">
+              <button class="page">1</button>
+              <button class="page">2</button>
+              <button class="page">3</button>
+            </div>
         </div>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
